Track and display generation timing stats
